* Author: Mike FABIAN <mfabian@redhat.com>
* 11 Sep 2019 Released 2.6.6 version
* When checking whether to show inline completion, normalize the first candidate as well
* Two more test cases in hunspell_suggest.py
* Make it work correctly with newer French hunspell dictionaries
* Skip some unittests when dictionaries or python modules needed are not installed
* Update emoji annotations from CLDR
* Add more test cases to m17n_translit_test.py for si-sayura.mim

* Author: Mike FABIAN <mfabian@redhat.com>
* 28 Aug 2019 Released 2.6.5 version
* Added Dutch translation (Thanks to Heimen Stoffels)
* Add si-sayura to the list of M17N input methods
* Add more test cases for m17n_translit.py, especially for si-sayura.mim

* Author: Mike FABIAN <mfabian@redhat.com>
* 17 Jul 2019 Released 2.6.4 version
* Update translations from zanata (cs updated, now 100% complete)
* Do not crash if initializing enchant or pyhunspell fails, continue without spellchecking
* Try to install myspell-xx_YY packages instead of hunspell-xx package on SUSE
* Fix loading of cldr annotations when the .xml files are zipped
* Add JoyPixels to good_emoji_fonts list

* Author: Mike FABIAN <mfabian@redhat.com>
* 19 Jun 2019 Released 2.6.3 version
* Performance improvement of around 30% in EmojiMatcher._match()
* Tiny performance improvement in itb_emoji.py _set_seq1()

* Author: Mike FABIAN <mfabian@redhat.com>
* 06 Jun 2019 Released 2.6.2 version
* Emoji ZWJSequence “people holding hands” is 12.0, not 10.0
* Update emoji annotations from CLDR
* icons: Regenerate with proper transparency (Thanks to FeRD (Frank Dana))
* Remove enable-background from icon SVG (Thanks to FeRD (Frank Dana))
* Update UnicodeData.txt to current Unicode 12.1.0

* Author: Mike FABIAN <mfabian@redhat.com>
* 06 May 2019 Released 2.6.1 version
* Support emoji presentation and text presentation in emoji-picker
* Improve itb_emoji.py to also support text presentation of emoji
* Update emoji annotations from CLDR
